# Instancing-Experiment

./: CMakeLists.txt  README.md  main.cpp
resources/shaders/: lighting.fs  lighting.vs  lighting_instancing.vs
